# fastapi-sso-example

./: .env.example  .gitignore  .vercelignore  CONTRIBUTING.md  LICENSE  Pipfile  README copy.md  README.md  SECURITY.md  authentication.py  database.py  db_models.py  local_storage.db  main.py  pyproject.toml  requirements.txt  schemas.py  vercel.json
.github/: dependabot.yml
api/: entrypoint.py
database_crud/: users_db_crud.py
routers/: auth.py  facebook_sso.py  github_sso.py  gitlab_sso.py  google_sso.py  linkedin_sso.py  microsoft_sso.py  spotify_sso.py  users.py  xtwitter_sso.py
static/css/: main.css
templates/: index.html  login.html  privacy_policy.html  users.html
