[project]
name = "fastapi-sso-example"
version = "0.1.0"
requires-python = "==3.12.*"

dependencies = [
    "fastapi==0.138.0",
    "pydantic==2.13.4",
    "uvicorn==0.49.0",
    "sqlalchemy==2.0.51",
    "passlib==1.7.4",
    "python-jose==3.5.0",
    "email-validator==2.3.0",
    "bcrypt==5.0.0",
    "python-multipart==0.0.32",
    "jinja2==3.1.6",
    "fastapi-sso==0.21.1",
    "python-dotenv==1.2.2",
    "itsdangerous==2.2.0",
    "psycopg2-binary==2.9.12"
]